# pcsc-lite-clone

CVSROOT/: checkoutlist  config  cvs-mailcommit  loginfo
Drivers/ocfBridge/: Makefile  OCFPCSC1.cpp  OCFPCSC1.h  PcscContexts.cpp  PcscContexts.h  PcscExceptions.cpp  PcscExceptions.h  SeverityLevels.h  Tracer.cpp  Tracer.h  fieldIO.cpp  fieldIO.h
Drivers/slbEGate/: AdmHndlr.c  AdmHndlr.h  Makefile  T0Hndlr.c  T0Hndlr.h  ifdhandler.c  pcscdefines.h  test.c  usb_osx.c  usblinux.c  usblinux.h  usbserial.c  usbserial.h  usbserial_osx.c
Drivers/slbEGate/slbEGate.pbproj/: project.pbxproj
IFDTest/: COPYING  Makefile  README  commands.c  commands.h  ifdtest.c  testA.c  testAMMI.c  testB.c  testBULL.c  testC.c  testGD.c  testIBM.c  testSCHL.c  testSIEMENS.c  testb.1.c
libmusclecard/: AUTHORS  COPYING  ChangeLog  Makefile.am  configure.in  reconf
libmusclecard/doc/: Makefile.am
libmusclecard/m4/: acx_pthread.m4
libmusclecard/src/: Makefile.am  debug.c  debug.h  dyn_generic.h  dyn_hpux.c  dyn_macosx.c  dyn_unix.c  musclecard.c  muscletest.c  strlcat.c  sys_generic.h  thread_generic.h  thread_unix.c  tokenfactory.c
libmusclecard/src/PCSC/: mscdefines.h  musclecard.h
libmusclecard/utils/bundleTool/: Makefile.am  bundleTool.c
pycsc/: CHANGELOG  COPYING  INSTALL  MANIFEST  Makefile  README  TODO  example.py  pycsc.c  setup.py
pycsc/PyCSC/: __init__.py
pycsc/examples/: example2.py  example_lowlevel.py
